# weavance

./: .env.example  .gitignore  .python-version  Makefile  README.md  compose.yaml
.github/workflows/: ci.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/migrations/: README  env.py
apps/api/migrations/versions/: 0001_create_captures.py
apps/api/src/weavance_api/: __init__.py  config.py  database.py  main.py
apps/api/src/weavance_api/api/: captures.py
apps/api/src/weavance_api/interpretation/: __init__.py  contract.py  interpreter.py
apps/api/src/weavance_api/models/: __init__.py  capture.py
apps/api/src/weavance_api/observability/: __init__.py  http.py  logging.py
apps/api/src/weavance_api/schemas/: __init__.py  capture.py
apps/api/src/weavance_api/services/: __init__.py  captures.py
apps/api/tests/: conftest.py  test_capture_api.py  test_capture_model.py  test_health.py  test_interpretation_contract.py  test_logging.py
apps/web/: Dockerfile  index.html  package-lock.json  package.json
apps/web/src/: App.test.tsx  App.tsx  styles.css
apps/web/src/api/: captures.ts
docs/: architecture.md  interpretation-contract.md  mvp.md  product-brief.md
docs/decisions/: 0001-monorepo.md  0002-bounded-ai.md  0003-inference-policy-and-recommendation.md  0004-postgresql-and-alembic.md  0005-observability-foundation.md
